--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -94,7 +94,7 @@
         id="menu-btn"
         class="sm:pt-3 sm:pb-2 sm:px-3 px-4 pt-2 pb-1 text-xl font-bold text-white border-4 border-black bg-secondary rounded-lg fixed top-3 right-4 z-50 transition delay-150 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-primary lg:hidden"
       >
-        ☰ Menu
+        ☰ Menú
       </button>
       <!-- Menú lateral que se mostrará cuando se haga clic en el botón -->
       <div
@@ -104,10 +104,14 @@
         <div
           class="absolute left-0 top-0 w-56 h-full bg-teal-800 text-white shadow-lg p-6"
         >
-          <h2 class="text-3xl font-bold mb-6 pt-1 border-4 border-white rounded-lg text-center">Menú</h2>
-          <ul class="text-xl py-12 font-bold">
+          <h2
+            class="text-3xl font-bold mb-2 pt-1 border-4 border-white rounded-lg text-center"
+          >
+            Menú
+          </h2>
+          <ul class="text-xl py-8 font-bold">
             <li
-              class="flex items-stretch justify-center gap-2 mb-16 px-2 py-3 border-4 rounded-lg border-white"
+              class="flex items-stretch justify-center gap-2 mb-12 px-2 py-3 border-4 rounded-lg border-white"
             >
               <a href="../index.html" class="flex items-center gap-3">
                 <svg
@@ -124,7 +128,7 @@
               </a>
             </li>
             <li
-              class="flex items-stretch justify-center gap-2 mb-16 px-2 py-3 border-4 rounded-lg border-white"
+              class="flex items-stretch justify-center gap-2 mb-12 px-2 py-3 border-4 rounded-lg border-white"
             >
               <a href="./sobre_mi.html" class="flex items-center gap-3">
                 <svg
@@ -141,7 +145,7 @@
               </a>
             </li>
             <li
-              class="flex items-stretch justify-center gap-2 mb-10 px-2 py-3 border-4 rounded-lg border-white"
+              class="flex items-stretch justify-center gap-2 mb-8 px-2 py-3 border-4 rounded-lg border-white"
             >
               <a href="./proyectos.html" class="flex items-center gap-3">
                 <svg
@@ -159,7 +163,7 @@
               </a>
             </li>
 
-            <li class="mb-10 flex justify-center">
+            <li class="mb-6 flex justify-center">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="h-20 w-20"
@@ -176,31 +180,141 @@
               <h1 class="text-xl text-center">Gabriel Cervantes Hernandez</h1>
             </li>
             <li>
-              <h2 class="text-center">Derechos reservados &copy; 2025</h2>
+              <h1 class="text-md text-center">
+                Derechos reservados &copy; 2025
+              </h1>
             </li>
           </ul>
         </div>
       </div>
     </header>
 
-    <main class="lg:py-40 pt-5 pb-8"></main>
+    <main class="lg:pt-0 lg:pb-3 pt-5 pb-5">
+      <section id="proyectos" class="md:pt-6 lg:py-16">
+        <div class="max-w-6xl mx-auto px-4">
+          <div class="flex justify-center">
+            <div class="text-center mb-5 w-3/4 md:w-1/2 lg:w-1/3 max-lg:px-5">
+              <h1
+                class="text-4xl border-4 bg-accent py-5 rounded-lg border-white"
+              >
+                Proyectos
+              </h1>
+            </div>
+          </div>
+
+          <!-- Contenedor de tarjetas -->
+          <div
+            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 md:mt-5"
+          >
+            <!-- Tarjeta de proyecto (actualmente una sola, de tus prácticas) -->
+            <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+              <!-- Imagen del proyecto (opcional) -->
+              <div class="flex justify-center pt-3">
+                <img
+                  src="../img/GIPP.png"
+                  alt="Proyecto de prácticas"
+                  class="h-48 object-cover"
+                />
+              </div>
+
+              <div class="p-6">
+                <h3 class="text-2xl font-semibold mb-2">
+                  Proyecto de Estadías
+                </h3>
+                <p class="text-gray-700 mb-4 text-justify">
+                  El Gestor de Información y Pruebas Psicológicas es un proyecto
+                  desarrollado en la Universidad Politécnica de Tlaxcala para el
+                  área de Psicología.
+                </p>
+                <a
+                  href="enlace-al-proyecto"
+                  target="_blank"
+                  class="text-teal-600 hover:underline"
+                >
+                  Ver más detalles →
+                </a>
+              </div>
+            </div>
+
+            <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+              <!-- Imagen del proyecto (opcional) -->
+              <div class="flex justify-center pt-3">
+                <img
+                  src="../img/GIPP.png"
+                  alt="Proyecto de prácticas"
+                  class="h-48 object-cover"
+                />
+              </div>
+
+              <div class="p-6">
+                <h3 class="text-2xl font-semibold mb-2">
+                  Proyecto de Estadías
+                </h3>
+                <p class="text-gray-700 mb-4 text-justify">
+                  El Gestor de Información y Pruebas Psicológicas es un proyecto
+                  desarrollado en la Universidad Politécnica de Tlaxcala para el
+                  área de Psicología.
+                </p>
+                <a
+                  href="enlace-al-proyecto"
+                  target="_blank"
+                  class="text-teal-600 hover:underline"
+                >
+                  Ver más detalles →
+                </a>
+              </div>
+            </div>
+
+            
+
+            <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+              <!-- Imagen del proyecto (opcional) -->
+              <div class="flex justify-center pt-3">
+                <img
+                  src="../img/tool-box.png"
+                  alt="Proyecto de prácticas"
+                  class="h-48 object-cover"
+                />
+              </div>
+
+              <div class="p-6">
+                <h3 class="text-2xl font-semibold mb-2">Próximo proyecto...</h3>
+                <p class="text-gray-700 mb-4 text-justify">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+                  repellendus dolorem praesentium quae aliquid ipsam dicta animi.
+                </p>
+                <a
+                  href="#"
+                  target="_blank"
+                  class="text-teal-600 hover:underline"
+                >
+                  Ver más detalles →
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <footer
       class="bg-secondary pt-4 flex justify-center items-center max-sm:px-4 text-white border-t-4 border-t-black"
     >
-      <div class="flex lg:w-1/5 md:w-1/2 flex-col items-end justify-center mr-5">
-
-        <div class="flex  text-center flex-col items-center">
-
-          <h2 class="text-3xl text-center font-extrabold mb-4">¡Conecta conmigo!</h2>
-          <p class="text-lg  mb-2">
+      <div
+        class="flex lg:w-1/5 md:w-1/2 flex-col items-end justify-center mr-5"
+      >
+        <div class="flex text-center flex-col items-center">
+          <h2 class="text-3xl text-center font-extrabold mb-4">
+            ¡Conecta conmigo!
+          </h2>
+          <p class="text-lg mb-2">
             Sígueme en mis redes sociales para estar al tanto de mis proyectos y
             novedades.
           </p>
         </div>
       </div>
 
-      <div class="flex flex-col  mb-3 gap-5">
+      <div class="flex flex-col mb-3 gap-5">
         <a
           href="https://github.com/GaruCH"
           target="_blank"
@@ -259,7 +373,6 @@
           <h2 class="text-2xl">Facebook</h2>
         </a>
       </div>
-
     </footer>
 
     <script src="../node_modules/feather-icons/dist/feather.min.js"></script>
