--- a/pages/sobre_mi.html
+++ b/pages/sobre_mi.html
@@ -94,7 +94,7 @@
         id="menu-btn"
         class="sm:pt-3 sm:pb-2 sm:px-3 px-4 pt-2 pb-1 text-xl font-bold text-white border-4 border-black bg-secondary rounded-lg fixed top-3 right-4 z-50 transition delay-150 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-primary lg:hidden"
       >
-        ☰ Menu
+        ☰ Menú
       </button>
       <!-- Menú lateral que se mostrará cuando se haga clic en el botón -->
       <div
@@ -105,13 +105,13 @@
           class="absolute left-0 top-0 w-56 h-full bg-teal-800 text-white shadow-lg p-6"
         >
           <h2
-            class="text-3xl font-bold mb-6 pt-1 border-4 border-white rounded-lg text-center"
+            class="text-3xl font-bold mb-2 pt-1 border-4 border-white rounded-lg text-center"
           >
             Menú
           </h2>
-          <ul class="text-xl py-12 font-bold">
+          <ul class="text-xl py-8 font-bold">
             <li
-              class="flex items-stretch justify-center gap-2 mb-16 px-2 py-3 border-4 rounded-lg border-white"
+              class="flex items-stretch justify-center gap-2 mb-12 px-2 py-3 border-4 rounded-lg border-white"
             >
               <a href="../index.html" class="flex items-center gap-3">
                 <svg
@@ -128,7 +128,7 @@
               </a>
             </li>
             <li
-              class="flex items-stretch justify-center gap-2 mb-16 px-2 py-3 border-4 rounded-lg border-white"
+              class="flex items-stretch justify-center gap-2 mb-12 px-2 py-3 border-4 rounded-lg border-white"
             >
               <a href="./sobre_mi.html" class="flex items-center gap-3">
                 <svg
@@ -145,7 +145,7 @@
               </a>
             </li>
             <li
-              class="flex items-stretch justify-center gap-2 mb-10 px-2 py-3 border-4 rounded-lg border-white"
+              class="flex items-stretch justify-center gap-2 mb-8 px-2 py-3 border-4 rounded-lg border-white"
             >
               <a href="./proyectos.html" class="flex items-center gap-3">
                 <svg
@@ -163,7 +163,7 @@
               </a>
             </li>
 
-            <li class="mb-10 flex justify-center">
+            <li class="mb-6 flex justify-center">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="h-20 w-20"
