--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -206,9 +206,7 @@
           <div
             class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 md:mt-5"
           >
-            <!-- Tarjeta de proyecto (actualmente una sola, de tus prácticas) -->
             <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-              <!-- Imagen del proyecto (opcional) -->
               <div class="flex justify-center pt-3">
                 <img
                   src="../img/GIPP.png"
@@ -226,18 +224,13 @@
                   desarrollado en la Universidad Politécnica de Tlaxcala para el
                   área de Psicología.
                 </p>
-                <a
-                  href="enlace-al-proyecto"
-                  target="_blank"
-                  class="text-teal-600 hover:underline"
-                >
-                  Ver más detalles →
-                </a>
+                <button id="GIPP_btn" class="text-teal-600 hover:underline">
+                  <h1>Ver más detalles →</h1>
+                </button>
               </div>
             </div>
 
             <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-              <!-- Imagen del proyecto (opcional) -->
               <div class="flex justify-center pt-3">
                 <img
                   src="../img/GIPP.png"
@@ -255,20 +248,13 @@
                   desarrollado en la Universidad Politécnica de Tlaxcala para el
                   área de Psicología.
                 </p>
-                <a
-                  href="enlace-al-proyecto"
-                  target="_blank"
-                  class="text-teal-600 hover:underline"
-                >
-                  Ver más detalles →
-                </a>
+                <button id="AIVI_btn" class="text-teal-600 hover:underline">
+                  <h1>Ver más detalles →</h1>
+                </button>
               </div>
             </div>
 
-            
-
             <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-              <!-- Imagen del proyecto (opcional) -->
               <div class="flex justify-center pt-3">
                 <img
                   src="../img/tool-box.png"
@@ -281,14 +267,15 @@
                 <h3 class="text-2xl font-semibold mb-2">Próximo proyecto...</h3>
                 <p class="text-gray-700 mb-4 text-justify">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
-                  repellendus dolorem praesentium quae aliquid ipsam dicta animi.
+                  repellendus dolorem praesentium quae aliquid ipsam dicta
+                  animi.
                 </p>
                 <a
                   href="#"
                   target="_blank"
                   class="text-teal-600 hover:underline"
                 >
-                  Ver más detalles →
+                  <!-- Ver más detalles → -->
                 </a>
               </div>
             </div>
@@ -296,6 +283,172 @@
         </div>
       </section>
     </main>
+
+    <div
+      id="modalOverlay"
+      class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center z-50"
+    >
+      <!-- Contenido del Modal -->
+      <div
+        class="bg-background p-6 rounded-lg shadow-lg w-11/12 max-w-3xl relative max-h-[80vh] overflow-y-auto"
+      >
+        <div>
+          <h2 class="text-2xl font-bold mb-4 text-center">
+            Gestor de información y pruebas Psicológicas (GIPP)
+          </h2>
+        </div>
+
+        <div>
+          <div
+            class="relative w-full max-w-3xl mx-auto overflow-hidden dark:rounded-lg dark:bg-slate-200 dark:border-8 dark:border-secondary dark:py-5"
+          >
+            <!-- Contenedor de las diapositivas -->
+            <div id="carousel" class="flex transition-transform duration-500">
+              <!-- Diapositiva 1 -->
+              <div class="w-full flex-shrink-0">
+                <img
+                  src="../img/html5.png"
+                  alt="Slide 1"
+                  class="w-52 mx-auto"
+                />
+              </div>
+              <!-- Diapositiva 2 -->
+              <div class="w-full flex-shrink-0">
+                <img src="../img/css.png" alt="Slide 2" class="w-36 mx-auto" />
+              </div>
+              <!-- Diapositiva 3 -->
+              <div class="w-full flex-shrink-0">
+                <img
+                  src="../img/JavaScript.png"
+                  alt="Slide 3"
+                  class="w-80 mx-auto"
+                />
+              </div>
+              <!-- Diapositiva 4 -->
+              <div class="w-full flex-shrink-0">
+                <img
+                  src="../img/Bootstrap.png"
+                  alt="Slide 3"
+                  class="w-60 mx-auto"
+                />
+              </div>
+              <!-- Diapositiva 5 -->
+              <div class="w-full flex-shrink-0">
+                <img
+                  src="../img/mysql.png"
+                  alt="Slide 3"
+                  class="w-52 mx-auto"
+                />
+              </div>
+              <!-- Diapositiva 6 -->
+              <div class="w-full flex-shrink-0">
+                <img src="../img/PHP.png" alt="Slide 3" class="w-80 mx-auto" />
+              </div>
+              <!-- Diapositiva 7 -->
+              <div class="w-full flex-shrink-0">
+                <img
+                  src="../img/codeigniter.svg"
+                  alt="Slide 3"
+                  class="w-44 mx-auto"
+                />
+              </div>
+            </div>
+
+            <!-- Controles -->
+            <button
+              id="prev"
+              class="absolute top-1/2 left-0 transform -translate-y-1/2 bg-black bg-opacity-50 text-white px-4 py-2 rounded-l-md"
+            >
+              &#10094;
+            </button>
+            <button
+              id="next"
+              class="absolute top-1/2 right-0 transform -translate-y-1/2 bg-black bg-opacity-50 text-white px-4 py-2 rounded-r-md"
+            >
+              &#10095;
+            </button>
+          </div>
+        </div>
+
+        <div class="flex md:justify-center max-sm:flex-wrap mt-2 mb-5 gap-2 justify-items-center">
+          <div>
+            <p class="py-1 px-1 bg-primary text-white font-bold rounded-xl">
+              Codeigniter 4
+            </p>
+          </div>
+          <div>
+            <p class="py-1 px-1 bg-primary text-white font-bold rounded-xl">
+              PHP
+            </p>
+          </div>
+          <div>
+            <p class="py-1 px-1 bg-primary text-white font-bold rounded-xl">
+              HTML5
+            </p>
+          </div>
+          <div>
+            <p class="py-1 px-1 bg-primary text-white font-bold rounded-xl">
+              CSS
+            </p>
+          </div>
+          <div>
+            <p class="py-1 px-1 bg-primary text-white font-bold rounded-xl">
+              JavaScript
+            </p>
+          </div>
+
+          <div>
+            <p class="py-1 px-1 bg-primary text-white font-bold rounded-xl">
+              Bootstrap 4
+            </p>
+          </div>
+
+          <div>
+            <p class="py-1 px-1 bg-primary text-white font-bold rounded-xl">
+              MySQL
+            </p>
+          </div>
+        </div>
+
+        <div>
+          <div class="my-2">
+            <h2>Descripción del proyecto:</h2>
+          </div>
+
+          <div>
+            <p class="text-justify">
+              El área de Psicología de la Universidad Politécnica de Tlaxcala
+              enfrentaba dificultades en la gestión de pruebas psicológicas
+              debido a procesos manuales y sistemas poco integrados. Para
+              solucionar esto, desarrollé una aplicación web que centraliza la
+              información de usuarios, pruebas, citas y más, reduciendo errores
+              y optimizando tiempos. Esta herramienta mejora la calidad del
+              servicio al facilitar el análisis de datos y agilizar la toma de
+              decisiones. Además, contribuye a la sostenibilidad institucional
+              al minimizar el uso de recursos físicos. En definitiva, es una
+              solución clave para fortalecer la atención psicológica y el
+              desarrollo académico.
+            </p>
+          </div>
+        </div>
+        <!-- Botón para cerrar el modal -->
+        <div class="flex justify-between mt-4">
+          <button
+            id="closeModal"
+            class="bg-red-500 text-white px-4 py-2 rounded shadow-md"
+          >
+            Cerrar Modal
+          </button>
+
+          <a
+            href="
+          "
+            class="bg-green-500 text-white px-4 py-2 rounded shadow-md"
+            >Ver demo</a
+          >
+        </div>
+      </div>
+    </div>
 
     <footer
       class="bg-secondary pt-4 flex justify-center items-center max-sm:px-4 text-white border-t-4 border-t-black"
